# nanocode

./: .bazelproject  .bazelrc  .gitignore  MODULE.bazel  README.md
java/agent/agentic/: BUILD.bazel
java/agent/agentic/src/main/java/io/github/jtpadilla/nanocode/agent/agentic/: NanocodeAgentic.java
java/agent/agentic/src/main/java/io/github/jtpadilla/nanocode/agent/agentic/agents/: FileAgent.java  SystemAgent.java  WebAgent.java
java/agent/agentic/src/main/java/io/github/jtpadilla/nanocode/agent/agentic/tools/: FileTools.java  SystemTools.java  WebTools.java
java/agent/basic/: BUILD.bazel
java/agent/basic/src/main/java/io/github/jtpadilla/nanocode/agent/basic/: NanocodeBasic.java
java/agent/basic/src/main/java/io/github/jtpadilla/nanocode/agent/basic/agents/: Assistant.java
java/agent/basic/src/main/java/io/github/jtpadilla/nanocode/agent/basic/tools/: Tools.java
java/agentic/: BUILD.bazel
java/agentic/src/main/java/io/github/jtpadilla/nanocode/agentic/: NanocodeAgentic.java
java/agentic/src/main/java/io/github/jtpadilla/nanocode/agentic/agents/: FileAgent.java  SystemAgent.java  WebAgent.java
java/agentic/src/main/java/io/github/jtpadilla/nanocode/agentic/tools/: FileTools.java  SystemTools.java  WebTools.java
java/basic/: BUILD.bazel
java/basic/src/main/java/io/github/jtpadilla/nanocode/basic/: NanocodeBasic.java
java/basic/src/main/java/io/github/jtpadilla/nanocode/basic/agents/: Assistant.java
java/basic/src/main/java/io/github/jtpadilla/nanocode/basic/tools/: Tools.java
java/config/src/main/java/io/github/jtpadilla/nanocode/config/: Config.java
java/format/: BUILD.bazel
java/format/src/main/java/io/github/jtpadilla/nanocode/format/: Format.java
java/lib/config/: BUILD.bazel
java/lib/config/src/main/java/io/github/jtpadilla/nanocode/lib/config/: Config.java
java/lib/format/: BUILD.bazel
java/lib/format/src/main/java/io/github/jtpadilla/nanocode/lib/format/: Format.java
java/result/: BUILD.bazel  CONSOLA.txt  LEEME.txt  RESULT.txt
java/result/src/main/java/: Main.java  Noticia.java  Scraper.java  UjiScraper.java
