load("@rules_java//java:defs.bzl", "java_binary")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "config",
    srcs = glob(["src/main/java/**/*.java"]),
    deps = [
        "@maven//:dev_langchain4j_langchain4j",
        "@maven//:dev_langchain4j_langchain4j_core",
        "@maven//:dev_langchain4j_langchain4j_google_ai_gemini",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_slf4j_slf4j_simple",
    ],
)
